# kafka-rust

./: Cargo.toml
config/: default.toml
src/: config.rs  error.rs  lib.rs  main.rs
src/kafka/: consumer.rs  mod.rs  producer.rs
src/models/: mod.rs  order.rs
