[package]
name = "kafka-demo"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "producer"
path = "src/bin/producer.rs"

[[bin]]
name = "consumer"
path = "src/bin/consumer.rs"

[dependencies]
anyhow = "1.0.102"
config = "0.15.23"
rdkafka = { version = "0.39.0", features = ["cmake-build"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
uuid = { version = "1.23.2", features = ["v4"] }
